SERVER-43832 Expose readConcern and writeConcern defaults in serverStatus

--- a/src/mongo/db/commands/SConscript
+++ b/src/mongo/db/commands/SConscript
@@ -369,6 +369,7 @@ env.Library(
         "mr.cpp",
         "oplog_application_checks.cpp",
         "oplog_note.cpp",
+        'read_write_concern_defaults_server_status.cpp',
         "resize_oplog.cpp",
         "restart_catalog_command.cpp",
         'rwc_defaults_commands.cpp',
@@ -423,6 +424,7 @@ env.Library(
         'mongod_fcv',
         'mongod_fsync',
         'profile_common',
+        'server_status',
         'servers',
         'set_index_commit_quorum_idl',
         'shell_protocol',
