--- a/src/mongo/s/commands/SConscript
+++ b/src/mongo/s/commands/SConscript
@@ -93,6 +93,7 @@ env.Library(
         'commands_public.cpp',
         'document_shard_key_update_util.cpp',
         'kill_sessions_remote.cpp',
+        's_read_write_concern_defaults_server_status.cpp',
         'strategy.cpp',
         env.Idlc('cluster_multicast.idl')[0],
         env.Idlc('kill_sessions_remote.idl')[0],
@@ -115,6 +116,7 @@ env.Library(
         '$BUILD_DIR/mongo/db/commands/set_index_commit_quorum_idl',
         '$BUILD_DIR/mongo/db/commands/test_commands_enabled',
         '$BUILD_DIR/mongo/db/commands/write_commands_common',
+        '$BUILD_DIR/mongo/db/commands/server_status',
         '$BUILD_DIR/mongo/db/ftdc/ftdc_server',
         '$BUILD_DIR/mongo/db/shared_request_handling',
         '$BUILD_DIR/mongo/db/logical_session_cache_impl',
