SERVER-45672 Reduce the number of resmoke jobs used in Enterprise RHEL 6.2 (implicit multiversion)

--- a/etc/evergreen.yml
+++ b/etc/evergreen.yml
@@ -9955,6 +9955,7 @@ buildvariants:
     tooltags: "ssl sasl gssapi"
     build_mongoreplay: true
     large_distro_name: rhel62-large
+    resmoke_jobs_factor: 0.25
   tasks:
   - name: compile_all_run_unittests_TG
     distros:
