SERVER-45618 Update patch file generation to handle Evergreen changes

--- a/etc/evergreen.yml
+++ b/etc/evergreen.yml
@@ -1713,7 +1713,7 @@ functions:
             extra_flags="--lint-scope=changed"
           fi
 
-          ${compile_env|} python3 ./buildscripts/scons.py ${compile_flags|} $extra_flags --stack-size=1024 GITDIFFFLAGS="--cached" ${targets}
+          ${compile_env|} python3 ./buildscripts/scons.py ${compile_flags|} $extra_flags --stack-size=1024 GITDIFFFLAGS="${revision}" ${targets}
 
   "scons compile":
     command: shell.exec
