SERVER-45438 Create serverStatus section for hedging metrics

--- a/src/mongo/s/client/SConscript
+++ b/src/mongo/s/client/SConscript
@@ -8,6 +8,7 @@ env.Library(
     target='sharding_client',
     source=[
         'shard_remote.cpp',
+        'hedging_metrics.cpp',
         'num_hosts_targeted_metrics.cpp',
          env.Idlc('shard_remote.idl')[0],
     ],
