--- a/etc/backports_required_for_multiversion_tests.yml
+++ b/etc/backports_required_for_multiversion_tests.yml
@@ -43,6 +43,8 @@ replica_sets_multiversion:
   test_file: jstests/replsets/read_operations_during_step_up.js
 - ticket: SERVER-42825
   test_file: jstests/replsets/step_down_on_secondary.js
+- ticket: SERVER-45010
+  test_file: jstests/replsets/rollback_dup_ids_clean_shutdown_during_rollback.js
 
 sharding_multiversion:
 - ticket: SERVER-38691
