SERVER-45370 Fix oplog hole and test parallel createCollection txns
Testing parallel transactions with createCollections found a hang
scenario caused by reserving oplog slots before transaction commit.
This patch adds this testing and fixes this bug.

--- a/buildscripts/resmokeconfig/suites/sharded_jscore_txns_sharded_collections.yml
+++ b/buildscripts/resmokeconfig/suites/sharded_jscore_txns_sharded_collections.yml
@@ -27,6 +27,7 @@ selector:
 
   # TODO(SERVER-45368) re-enable once collection creation is permitted in cross-shard transactions.
   - jstests/core/txns/create_collection.js
+  - jstests/core/txns/create_collection_parallel.js
 
   exclude_with_any_tags:
   - assumes_against_mongod_not_mongos
