SERVER-45374 Upgrade all downgraded unique indexes on startup in FCV 4.2
When we rebuild unfinished unique indexes during startup recovery, the
indexes are built with a downgraded unique index format version,
regardless of FCV. If we detect any incorrectly downgraded unique
indexes while in FCV 4.2 during startup, upgrade all unique indexes to
ensure all indexes have the correct format version.

--- a/src/mongo/db/storage/SConscript
+++ b/src/mongo/db/storage/SConscript
@@ -27,6 +27,16 @@ env.Library(
     )
 
 env.Library(
+    target='downgraded_unique_indexes',
+    source=[
+        'downgraded_unique_indexes.cpp',
+        ],
+    LIBDEPS=[
+        '$BUILD_DIR/mongo/base',
+        ],
+    )
+
+env.Library(
     target='index_entry_comparison',
     source=[
         'index_entry_comparison.cpp',
