--- a/src/mongo/db/SConscript
+++ b/src/mongo/db/SConscript
@@ -1317,6 +1317,7 @@ env.Library(
         'dbhelpers',
         'repair_database',
         'repl/repl_settings',
+        'storage/downgraded_unique_indexes',
         'storage/storage_repair_observer',
     ],
 )
