--- a/src/mongo/db/storage/wiredtiger/SConscript
+++ b/src/mongo/db/storage/wiredtiger/SConscript
@@ -85,6 +85,7 @@ if wiredtiger:
         LIBDEPS_PRIVATE= [
             'oplog_stone_parameters',
             '$BUILD_DIR/mongo/db/snapshot_window_options',
+            '$BUILD_DIR/mongo/db/storage/downgraded_unique_indexes',
             '$BUILD_DIR/mongo/db/storage/storage_repair_observer',
             '$BUILD_DIR/mongo/util/options_parser/options_parser',
             ],
