--- a/etc/evergreen.yml
+++ b/etc/evergreen.yml
@@ -8243,7 +8243,7 @@ tasks:
           commit_message_content=$(cat commit_message.txt)
 
           ${activate_virtualenv}
-          $python buildscripts/validate_commit_message.py "$commit_message_content" -a "${author}"
+          $python buildscripts/validate_commit_message.py "$commit_message_content"
         fi
 
 - <<: *task_template
