SERVER-45544: Add burn_in_tags to generate tests for test tags

--- a/etc/evergreen.yml
+++ b/etc/evergreen.yml
@@ -326,7 +326,6 @@ variables:
   - enterprise-rhel-62-64-bit-majority-read-concern-off
   - enterprise-rhel-62-64-bit-multi-txn-oplog-entries
   - enterprise-rhel-62-64-bit-required-inmem
-  - enterprise-rhel-62-64-bit-required-majority-read-concern-off
   - enterprise-rhel-67-s390x
   - enterprise-rhel-70-64-bit
   - enterprise-rhel-70-64-bit-kitchen-sink
@@ -1300,6 +1299,41 @@ functions:
 
         cd $target_dir
         tar xzf generate_tasks_config.tgz
+
+  "generate burn in tags":
+    - command: expansions.write
+      params:
+        file: src/expansions.yml
+    - *configure_evergreen_api_credentials
+    - command: shell.exec
+      type: test
+      params:
+        working_dir: src
+        shell: bash
+        script: |
+          set -o errexit
+          ${activate_virtualenv}
+          PATH=$PATH:$HOME $python buildscripts/burn_in_tags.py --expansion-file expansions.yml
+    - command: archive.targz_pack
+      params:
+        target: burn_in_tags_gen.tgz
+        source_dir: src/generated_burn_in_tags_config
+        include:
+          - "*"
+    - command: s3.put
+      params:
+        aws_key: ${aws_key}
+        aws_secret: ${aws_secret}
+        local_file: burn_in_tags_gen.tgz
+        remote_file: ${project}/${build_variant}/${revision}/burn_in_tags_gen/burn_in_tags_gen-${build_id}.tgz
+        bucket: mciuploads
+        permissions: public-read
+        content_type: ${content_type|application/gzip}
+        display_name: Burn_in_tags Task Config - Execution ${execution}
+    - command: generate.tasks
+      params:
+        files:
+          - src/generated_burn_in_tags_config/burn_in_tags_gen.json
 
   "generate resmoke tasks":
     - command: manifest.load
@@ -3930,6 +3964,7 @@ tasks:
   - func: "git get project"
   - func: "set task expansion macros"
   - func: "set up virtualenv"
+  - func: "configure evergreen api credentials"
   - command: shell.exec
     params:
       working_dir: src
@@ -3938,21 +3973,17 @@ tasks:
         set -o errexit
         set -o verbose
         ${activate_virtualenv}
-        # If this is a scheduled build, we check for changes against the last scheduled commit.
-        if [ "${is_patch}" != "true" ]; then
-          burn_in_args="--checkEvergreen"
-        fi
         # Capture a list of new and modified tests. The expansion macro burn_in_tests_build_variant
         # is used to for finding the associated tasks from a different build varaint than the
         # burn_in_tests_gen task executes on.
-        build_variant_opts="--buildVariant=${build_variant}"
+        build_variant_opts="--build-variant=${build_variant}"
         if [ -n "${burn_in_tests_build_variant|}" ]; then
-          build_variant_opts="--buildVariant=${burn_in_tests_build_variant} --runBuildVariant=${build_variant}"
+          build_variant_opts="--build-variant=${burn_in_tests_build_variant} --run-build-variant=${build_variant}"
         fi
         # Increase the burn_in repetition from 2 to 1000 executions or 10 minutes
-        burn_in_args="$burn_in_args --repeatTestsMin=2 --repeatTestsMax=1000 --repeatTestsSecs=600"
+        burn_in_args="$burn_in_args --repeat-tests-min=2 --repeat-tests-max=1000 --repeat-tests-secs=600"
         # Evergreen executable is in $HOME.
-        PATH=$PATH:$HOME $python buildscripts/burn_in_tests.py --branch=${branch_name} $build_variant_opts --distro=${distro_id} --generateTasksFile=burn_in_tests_gen.json --noExec $burn_in_args
+        PATH=$PATH:$HOME $python buildscripts/burn_in_tests.py --project=${project} $build_variant_opts --distro=${distro_id} --generate-tasks-file=burn_in_tests_gen.json $burn_in_args --verbose
   - command: archive.targz_pack
     params:
       target: src/burn_in_tests_gen.tgz
@@ -4616,6 +4647,23 @@ tasks:
     vars:
       resmoke_args: --storageEngine=wiredTiger
       fallback_num_sub_suites: 4
+
+- name: burn_in_tags_gen
+  depends_on:
+    - name: compile
+  commands:
+    - command: manifest.load
+    - func: "git get project"
+    - func: "set task expansion macros"
+    - func: "set up virtualenv"
+      vars:
+        pip_dir: ${workdir}/src/etc/pip
+    - func: "generate burn in tags"
+      vars:
+        max_revisions: 25
+        repeat_tests_secs: 600
+        repeat_tests_min: 2
+        repeat_tests_max: 1000
 
 - name: auth_audit_gen
   tags: ["auth", "audit"]
@@ -7388,25 +7436,6 @@ buildvariants:
   - name: .jstestfuzz .common !.repl
   - name: sharding_jscore_passthrough
 
-- name: linux-64-required-duroff
-  display_name: "! Linux (No Journal)"
-  run_on:
-  - rhel62-small
-  expansions:
-    <<: *linux-64-required-duroff-expansions
-    burn_in_tests_build_variant: linux-64-duroff
-  tasks:
-  # This build variants exists specifically to test that newly added or modified JavaScript tests
-  # are correctly tagged with "requires_journaling" prior to the changes being pushed. It uses the
-  # task list from the linux-64-duroff build variant to determine the resmoke.py YAML suite
-  # configurations to run the tests under. Do not add more tasks to this list.
-  - name: compile_TG
-    requires:
-    - name: burn_in_tests_gen
-    distros:
-    - rhel62-large
-  - name: burn_in_tests_gen
-
 - name: ubuntu1804
   display_name: SSL Ubuntu 18.04
   run_on:
@@ -8624,6 +8653,7 @@ buildvariants:
     jstestfuzz_concurrent_num_files: 10
     target_resmoke_time: 10
     large_distro_name: rhel62-large
+    burn_in_tag_buildvariants: enterprise-rhel-62-64-bit-majority-read-concern-off enterprise-rhel-62-64-bit-inmem linux-64-duroff
   tasks:
   - name: compile_all_run_unittests_TG
     distros:
@@ -8637,6 +8667,7 @@ buildvariants:
   - name: burn_in_tests_gen
     distros:
     - rhel62-large
+  - name: burn_in_tags_gen
   - name: .aggfuzzer
   - name: .aggregation
   - name: audit
@@ -8964,29 +8995,6 @@ buildvariants:
   - name: .sharding .common
   - name: snmp
   - name: .updatefuzzer
-
-- name: enterprise-rhel-62-64-bit-required-majority-read-concern-off
-  display_name: "! Enterprise RHEL 6.2 (majority read concern off)"
-  modules:
-    - enterprise
-  run_on:
-    - rhel62-small
-  expansions:
-    <<: *enterprise-rhel-62-64-bit-majority-read-concern-off-expansions
-    burn_in_tests_build_variant: enterprise-rhel-62-64-bit-majority-read-concern-off
-  tasks:
-    # This build variants exists specifically to test that newly added or modified JavaScript tests
-    # are correctly tagged with "requires_majority_read_concern", "uses_change_streams",
-    # "uses_prepare_transaction", and "uses_multi_shard_transaction" prior to the changes being
-    # pushed. It uses the task list from the enterprise-rhel-62-64-bit-majority-read-concern-off
-    # build variant to determine the resmoke.py YAML suite configurations to run the tests under. Do
-    # not add more tasks to this list.
-    - name: compile_TG
-      requires:
-        - name: burn_in_tests_gen
-      distros:
-        - rhel62-large
-    - name: burn_in_tests_gen
 
 - name: enterprise-rhel-62-64-bit-coverage
   display_name: "~ Enterprise RHEL 6.2 DEBUG Code Coverage"
@@ -10272,39 +10280,6 @@ buildvariants:
   - name: snmp
   - name: .ssl
   - name: .updatefuzzer
-
-- name: enterprise-rhel-62-64-bit-required-inmem
-  display_name: "! Enterprise RHEL 6.2 (inMemory)"
-  modules:
-  - enterprise
-  run_on:
-  - rhel62-small
-  expansions:
-    <<: *enterprise-rhel-62-64-bit-inmem-expansions
-    burn_in_tests_build_variant: enterprise-rhel-62-64-bit-inmem
-  tasks:
-  # This build variant exists specifically to test that newly added or modified JavaScript tests
-  # properly tag non-persistent storage tests using "requires_persistence", "requires_journaling" or
-  # "uses_transactions".
-  #
-  # It uses the task list from the enterprise-rhel-62-64-bit-inmem build variant to
-  # determine the resmoke.py YAML suite configurations to run the tests under. Do not add more tasks
-  # to this list.
-  #
-  # It also runs dbtest, since at least one time we have broken the
-  # connection bewteen the in-mem storage engine and the dbtest, but
-  # didn't notice since no other required builders tested that
-  # combination.
-  - name: dbtest_TG
-    distros:
-    - rhel62-large
-  - name: compile_TG
-    requires:
-    - name: burn_in_tests_gen
-    distros:
-    - rhel62-large
-  - name: burn_in_tests_gen
-  - name: jsCore
 
 - name: linux-64-ephemeralForTest
   display_name: Linux (ephemeralForTest)
