SERVER-45677 libunwind on by default where possible
    - SCons configure to probe for libunwind support
    - gracefully handle SIGUSR2 without libunwind
    - integrate libunwind on-by-default (linux-x86_64) into evergreen

--- a/src/mongo/config.h.in
+++ b/src/mongo/config.h.in
@@ -89,5 +89,8 @@
 // Set to which provider defines USDT
 @mongo_config_usdt_provider@
 
+// Defined if using libunwind.
+@mongo_config_use_libunwind@
+
 // Defined if WiredTiger storage engine is enabled
 @mongo_config_wiredtiger_enabled@
