--- a/etc/evergreen.yml
+++ b/etc/evergreen.yml
@@ -353,7 +353,7 @@ variables:
   - enterprise-rhel-67-s390x
   - enterprise-rhel-70-64-bit
   - enterprise-rhel-70-64-bit-kitchen-sink
-  - enterprise-rhel-70-64-bit-libunwind
+  - enterprise-rhel-70-64-bit-no-libunwind
   - enterprise-rhel-71-ppc64le
   - enterprise-rhel-71-ppc64le-inmem
   - enterprise-rhel-72-s390x
@@ -8498,6 +8498,7 @@ buildvariants:
   - name: .jscore .common
   - name: jsCore_txns_large_txns_format
   - name: jsonSchema
+  - name: libunwind_tests
   - name: .logical_session_cache
   - name: .multi_shard
   - name: multi_stmt_txn_jscore_passthrough_with_migration_gen
@@ -8589,6 +8590,7 @@ buildvariants:
   - name: free_monitoring
   - name: .jscore .common
   - name: .jstestfuzz .common
+  - name: libunwind_tests
   - name: .logical_session_cache .one_sec
   - name: multiversion
   - name: replica_sets
@@ -8641,6 +8643,7 @@ buildvariants:
   - name: jsCore_auth
   - name: .jstestfuzz .common
   - name: .jstestfuzz_multiversion_gen
+  - name: libunwind_tests
   - name: .logical_session_cache .one_sec
   - name: .multiversion_fuzzer
   - name: .multiversion_passthrough
@@ -8696,6 +8699,7 @@ buildvariants:
     - ubuntu1604-build
   - name: .jscore .common
   - name: .jstestfuzz .common
+  - name: libunwind_tests
   - name: .logical_session_cache .one_sec
   - name: multiversion
   - name: .powercycle
@@ -9013,6 +9017,7 @@ buildvariants:
   - name: .encrypt !.aggregation
   - name: .jscore .common !.compat
   - name: .jstestfuzz .common
+  - name: libunwind_tests
   - name: .logical_session_cache .one_sec
   - name: noPassthrough_gen
   - name: noPassthroughWithMongod_gen
@@ -9066,6 +9071,7 @@ buildvariants:
   - name: free_monitoring
   - name: .jscore .common
   - name: .jstestfuzz .common
+  - name: libunwind_tests
   - name: .logical_session_cache .one_sec
   - name: multiversion
   - name: replica_sets
@@ -9118,6 +9124,7 @@ buildvariants:
   - name: .encrypt !.aggregation
   - name: .jscore .common !.compat
   - name: .jstestfuzz .common
+  - name: libunwind_tests
   - name: .logical_session_cache .one_sec
   - name: noPassthrough_gen
   - name: noPassthroughWithMongod_gen
@@ -9174,6 +9181,7 @@ buildvariants:
   - name: free_monitoring
   - name: .jscore .common
   - name: .jstestfuzz .common
+  - name: libunwind_tests
   - name: .logical_session_cache .one_sec
   - name: multiversion
   - name: replica_sets
@@ -9751,6 +9759,7 @@ buildvariants:
   - name: jsCore_txns_large_txns_format
   - name: jsonSchema
   - name: .jstestfuzz
+  - name: libunwind_tests
   - name: .logical_session_cache
   - name: mqlrun
   - name: .multi_shard
@@ -10155,6 +10164,7 @@ buildvariants:
     - name: jsCore_minimum_batch_size
     - name: jsCore_op_query
     - name: .jstestfuzz_multiversion_gen
+    - name: libunwind_tests
     - name: .logical_session_cache .one_sec
     - name: .multi_shard .common
     - name: multiversion
@@ -10216,6 +10226,7 @@ buildvariants:
   - name: .jscore .common !.compat !.decimal !.sharding
   - name: jsCore_txns_large_txns_format
   - name: .jstestfuzz .common
+  - name: libunwind_tests
   - name: .logical_session_cache .one_sec
   - name: .ocsp
   - name: replica_sets_auth_gen
@@ -10274,6 +10285,7 @@ buildvariants:
   - name: jsCore_txns_large_txns_format
   - name: .jstestfuzz .common
   - name: .logical_session_cache .one_sec
+  - name: libunwind_tests
   - name: replica_sets_auth_gen
   - name: replica_sets_jscore_passthrough
   - name: .replica_sets .multi_oplog
@@ -10293,17 +10305,16 @@ buildvariants:
 # This variant is to intentionally test uncommon features nightly
 - <<: *enterprise-rhel-70-64-bit-template
   name: enterprise-rhel-70-64-bit-kitchen-sink
-  display_name: "~ Enterprise RHEL 7.0 (Dagger, libunwind)"
+  display_name: "~ Enterprise RHEL 7.0 (Dagger)"
   expansions:
     <<: *enterprise-rhel-70-64-bit-expansions-template
-    compile_flags: --ssl --use-libunwind MONGO_DISTMOD=rhel70 -j$(grep -c ^processor /proc/cpuinfo) --variables-files=etc/scons/mongodbtoolchain_v3_gcc.vars
+    compile_flags: --ssl MONGO_DISTMOD=rhel70 -j$(grep -c ^processor /proc/cpuinfo) --variables-files=etc/scons/mongodbtoolchain_v3_gcc.vars
     additional_targets: dagger # If this moves to another variant, update the compile_all task
   tasks:
   - name: compile_all_run_unittests_TG
     distros:
     - rhel70
   - name: jsCore
-  - name: libunwind_tests
 
 - <<: *enterprise-rhel-70-64-bit-template
   name: hot_backups-rhel-70-64-bit
@@ -10321,13 +10332,13 @@ buildvariants:
   - name: noPassthrough_gen
 
 - <<: *enterprise-rhel-70-64-bit-template
-  name: enterprise-rhel-70-64-bit-libunwind
-  display_name: "~ Enterprise RHEL 7.0 (libunwind)"
+  name: enterprise-rhel-70-64-bit-no-libunwind
+  display_name: "~ Enterprise RHEL 7.0 (no-libunwind)"
   runs_on:
   - rhel70
   expansions:
     <<: *enterprise-rhel-70-64-bit-expansions-template
-    compile_flags: --ssl MONGO_DISTMOD=rhel70 --opt=on -j$(grep -c ^processor /proc/cpuinfo) --variables-files=etc/scons/mongodbtoolchain_v3_gcc.vars --use-libunwind
+    compile_flags: --ssl MONGO_DISTMOD=rhel70 --use-libunwind=off --opt=on -j$(grep -c ^processor /proc/cpuinfo) --variables-files=etc/scons/mongodbtoolchain_v3_gcc.vars
     has_packages: false
     mh_target: ""
   # Override list of tasks to exclude package testing and publishing
@@ -10347,7 +10358,6 @@ buildvariants:
   - name: jsCore_txns_large_txns_format
   - name: .jstestfuzz .common
   - name: .logical_session_cache .one_sec
-  - name: libunwind_tests
   - name: replica_sets_auth_gen
   - name: replica_sets_jscore_passthrough
   - name: .replica_sets .multi_oplog
