--- a/buildscripts/resmokeconfig/suites/sharding_last_stable_mongos_and_mixed_shards.yml
+++ b/buildscripts/resmokeconfig/suites/sharding_last_stable_mongos_and_mixed_shards.yml
@@ -116,8 +116,10 @@ selector:
   - jstests/sharding/explain_cmd.js
   # Enable when SERVER-44733 is backported
   - jstests/sharding/change_streams_update_lookup_shard_metadata_missing.js
-   # Enable after SERVER-44477 is backported and available on older binaries.
+  # Disabled due to missing functionality
   - jstests/sharding/mr_merge_to_existing.js
+  # Disabled due to missing functionality
+  - jstests/sharding/ssv_after_restart_of_shards_and_mongos_workarround.js
 executor:
   config:
     shell_options:
