SERVER-45767 Blacklist create_database.js from concurrency_replication_multi_stmt_txn* suites
This test is incompatible with this set of suites.

--- a/buildscripts/resmokeconfig/suites/concurrency_replication_multi_stmt_txn.yml
+++ b/buildscripts/resmokeconfig/suites/concurrency_replication_multi_stmt_txn.yml
@@ -29,6 +29,9 @@ selector:
   # Extracts error code from write error, which is obscured by runInsideTransaction.
   - jstests/concurrency/fsm_workloads/access_collection_in_transaction_after_catalog_changes.js
 
+  # Induces non-blindly-retriable errors (see SERVER-45767).
+  - jstests/concurrency/fsm_workloads/create_database.js
+
   exclude_with_any_tags:
   - does_not_support_causal_consistency
   - requires_sharding
