SERVER-45713 run rhel7 publish tasks on larger distro

--- a/etc/evergreen.yml
+++ b/etc/evergreen.yml
@@ -9171,6 +9171,8 @@ buildvariants:
     distros:
     - ubuntu1604-packer
   - name: .publish
+    distros:
+    - rhel70
 
 # This variant is to intentionally test uncommon features nightly
 - <<: *enterprise-rhel-70-64-bit-template
@@ -9330,6 +9332,8 @@ buildvariants:
     distros:
     - ubuntu1604-packer
   - name: .publish
+    distros:
+    - rhel70
 
 - name: rhel80
   display_name: SSL RHEL 8.0
@@ -9456,7 +9460,7 @@ buildvariants:
   - name: .stitch
   - name: .publish
     distros:
-    - rhel70-small
+    - rhel70
 
 - name: enterprise-rhel-72-s390x
   display_name: Enterprise RHEL 7.2 s390x
@@ -9513,7 +9517,7 @@ buildvariants:
   - name: .stitch
   - name: .publish
     distros:
-    - rhel70-small
+    - rhel70
 
 - name: enterprise-rhel-67-s390x
   display_name: Enterprise RHEL 6.7 s390x
