SERVER-45790 Robustify $unionWith parsing
 create mode 100644 src/mongo/db/pipeline/document_source_union_with.idl

--- a/src/mongo/db/pipeline/SConscript
+++ b/src/mongo/db/pipeline/SConscript
@@ -393,6 +393,7 @@ env.Library(
         env.Idlc('document_source_merge.idl')[0],
         env.Idlc('document_source_merge_modes.idl')[0],
         env.Idlc('document_source_replace_root.idl')[0],
+        env.Idlc('document_source_union_with.idl')[0],
         env.Idlc('exchange_spec.idl')[0],
         env.Idlc('value.idl')[0],
         'document_source_merge_spec.cpp',
