--- a/src/mongo/s/query/SConscript
+++ b/src/mongo/s/query/SConscript
@@ -29,24 +29,14 @@ env.Library(
     target='cluster_aggregate',
     source=[
         'cluster_aggregate.cpp',
+        'cluster_aggregation_planner.cpp',
     ],
     LIBDEPS=[
         '$BUILD_DIR/mongo/db/pipeline/pipeline',
-        '$BUILD_DIR/mongo/s/query/cluster_aggregation_planner',
         '$BUILD_DIR/mongo/s/query/cluster_client_cursor',
         '$BUILD_DIR/mongo/db/pipeline/mongos_process_interface',
         '$BUILD_DIR/mongo/db/pipeline/sharded_agg_helpers',
         '$BUILD_DIR/mongo/db/views/views',
-        'cluster_query',
-    ]
-)
-
-env.Library(
-    target='cluster_aggregation_planner',
-    source=[
-        'cluster_aggregation_planner.cpp',
-    ],
-    LIBDEPS=[
         'cluster_query',
     ]
 )
@@ -154,9 +144,9 @@ env.CppUnitTest(
         "async_results_merger_test.cpp",
         "blocking_results_merger_test.cpp",
         "cluster_aggregate_test.cpp",
-        "cluster_aggregation_planner_test.cpp",
         "cluster_client_cursor_impl_test.cpp",
         "cluster_cursor_manager_test.cpp",
+        "cluster_exchange_test.cpp",
         "establish_cursors_test.cpp",
         "results_merger_test_fixture.cpp",
         "router_stage_limit_test.cpp",
