SERVER-43069: Condition logging for slow ops on sample rate
 create mode 100644 src/mongo/util/log_with_sampling.h
 create mode 100644 src/mongo/util/log_with_sampling_test.cpp

--- a/src/mongo/util/SConscript
+++ b/src/mongo/util/SConscript
@@ -575,6 +575,7 @@ icuEnv.CppUnitTest(
         'itoa_test.cpp',
         'latch_analyzer_test.cpp',
         'lockable_adapter_test.cpp',
+        'log_with_sampling_test.cpp',
         'lru_cache_test.cpp',
         'md5_test.cpp',
         'md5main.cpp',
