SERVER-45505 Add ResumableChangeStreamError error label
 delete mode 100644 jstests/change_streams/error_label.js
 create mode 100644 jstests/noPassthrough/change_stream_error_label.js
 create mode 100644 jstests/sharding/change_stream_error_label.js

--- a/src/mongo/base/error_codes.yml
+++ b/src/mongo/base/error_codes.yml
@@ -18,7 +18,6 @@ error_categories:
     - ExceededTimeLimitError
     - SnapshotError
     - VoteAbortError
-    - NonResumableChangeStreamError
     - RetriableError
 
 error_codes:
@@ -303,7 +302,7 @@ error_codes:
     - {code: 277,name: AlarmAlreadyFulfilled}
     - {code: 278,name: UnsatisfiableCommitQuorum}
     - {code: 279,name: ClientDisconnect,categories: [Interruption]}
-    - {code: 280,name: ChangeStreamFatalError,categories: [NonResumableChangeStreamError]}
+    - {code: 280,name: ChangeStreamFatalError}
 
     # The two codes below are for internal use only and must never be returned in a network response
     # TransactionCoordinatorSteppingDown gets converted to InterruptedDueToReplStateChange
@@ -314,7 +313,7 @@ error_codes:
     - {code: 284,name: ForTestingErrorExtraInfoWithExtraInfoInNamespace,
                   extra: 'nested::twice::NestedErrorExtraInfoExample'}
     - {code: 285,name: IndexBuildAlreadyInProgress}
-    - {code: 286,name: ChangeStreamHistoryLost,categories: [NonResumableChangeStreamError]}
+    - {code: 286,name: ChangeStreamHistoryLost}
 
     # The code below is for internal use only and must never be returned in a network response
     - {code: 287,name: TransactionCoordinatorDeadlineTaskCanceled}
