--- a/src/mongo/db/SConscript
+++ b/src/mongo/db/SConscript
@@ -1327,7 +1327,9 @@ env.Library(
         'error_labels.cpp',
     ],
     LIBDEPS=[
+        '$BUILD_DIR/mongo/db/pipeline/lite_parsed_document_source',
         'commands',
+        'curop',
         'logical_session_id',
     ],
 )
