SERVER-45437 Add readHedgingMode serverParameter
 create mode 100644 src/mongo/s/mongos_server_parameters.cpp
 create mode 100644 src/mongo/s/mongos_server_parameters.h

--- a/src/mongo/s/SConscript
+++ b/src/mongo/s/SConscript
@@ -413,6 +413,7 @@ env.Library(
 env.Library(
     target='mongos_server_parameters',
     source=[
+        'mongos_server_parameters.cpp',
         env.Idlc('mongos_server_parameters.idl')[0],
     ],
     LIBDEPS_PRIVATE=[
